ajout des logo et du style de la section cinq en savoir plus

--- a/css/main.css
+++ b/css/main.css
@@ -506,4 +506,10 @@ video {
 
 }
 
+.fifth-content-element {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 
