--- a/css/main.css
+++ b/css/main.css
@@ -92,9 +92,10 @@ video {
   margin-top: -80px;
 }
 #siteWrapper header {
-  height: 80px;
-  background: #fff;
-  border-bottom: .5px solid rgb(197, 197, 197);
+  height: 60px;
+
+  background-color: #FBEBE2;
+  line-height: 1.2;
 }
 #siteWrapper header.fixed {
   position: fixed;
@@ -108,7 +109,7 @@ video {
   display: flex;
   justify-content: space-around;
   margin: 1rem auto;
-  font-size: 2rem;
+  font-size: 1.6rem;
   z-index: 1000;
 }
 .nav-content li a {
@@ -119,7 +120,7 @@ video {
 }
 
 .nav-content li a:hover {
-  color: #0019E5;
+  color: #1ab687;
 }
 
 .current-menu-item
@@ -159,11 +160,6 @@ video {
     text-align: right;
 }
 
-section:nth-child(1),
-section:nth-child(3),
-section:nth-child() {
-
-}
 
 .first-content,
 .third-content,
@@ -173,9 +169,9 @@ section:nth-child() {
     padding-top: 2rem;
     padding-bottom: 20rem;
     /* background-color: #FBEBE2; */
-    background-color: #FAF2E8;
+    /* background-color: #FAF2E8; */
     filter: drop-shadow(0 6px 10px #000);
-  /*   background-color: #EDE4D1; */
+    background-color: #EDE4D1;
 }
 
 .first-content-element {
@@ -183,6 +179,9 @@ section:nth-child() {
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(3,1fr);
     align-items: center;
+
+    background-color: #FAF2E8;
+    border-radius: 2rem;
 }
 
 .first-content-element-items {
@@ -468,6 +467,9 @@ section:nth-child() {
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
 
+    background-color: #FAF2E8;
+    border-radius: 2rem;
+
     /* z-index: 1; */
 }
     
@@ -497,6 +499,7 @@ section:nth-child() {
   border: 1px solid #CCC;
   margin: 40px 0;
   perspective: 600px;
+  z-index: 1;
 }
 .scene:nth-child(1) {
   grid-column:  2;
@@ -543,6 +546,11 @@ grid-row: 8;
   transition: transform 1s;
 }
 
+.card:hover {
+  
+}
+
+
 .card.is-flipped {
   transform: translateX(-100%) rotateY(-180deg);
 }
@@ -563,9 +571,6 @@ grid-row: 8;
   justify-content: center;
 }
 
-.card__face--front {
-  background: red;
-}
 
 #card1 .card__face--front {
   background-color: #B800F0;
@@ -604,7 +609,7 @@ grid-row: 8;
   transition : all ease-in-out 1s;
   z-index: 1;
   overflow: hidden;
-  padding: 5rem;
+  /* padding: 5rem; */
   z-index: 1000;
 }
 
@@ -614,6 +619,23 @@ grid-row: 8;
   padding: 5rem;
   margin: auto;
   z-index: 1;
+}
+
+.card-surprise-box {
+  filter: drop-shadow(-5px 6px 10px rgb(192, 192, 192));
+  grid-column: 2/5;
+  grid-row: 9/15;
+}
+
+.card-surprise {
+  -webkit-clip-path: polygon(100% 0, 0 0, 50% 100%);
+  clip-path: polygon(100% 0, 0 0, 50% 100%);
+  background-color: #FBEBE2;
+  border-radius: 1rem;
+  width: auto;
+  height: 50rem;
+  margin-bottom: 2rem;
+  box-shadow: ;
 }
 
 
@@ -647,21 +669,32 @@ grid-row: 8;
 .fourth-content-element {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-}
-
-.fourth-content-element-item,
-.fourth-content-element-item figure {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-
-    max-width: 20rem;
-    margin: 4rem auto;
+    align-items: center;
+    gap: 5rem;
 }
 
 .fourth-content-element-item {
-    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    margin: auto;
 
+    align-items: center;
+    background-color: #FAF2E8;
+    border-radius: 2rem;
+    /* max-width: 20rem; */
+}
+
+.fourth-content-element-item-group {
+  padding: 1rem;
+}
+
+.fourth-content-element-item figure {
+  flex-direction: column;
+}
+
+.fourth-content-element-item figure figcaption {
+  padding: 5rem 0;
 }
 
 
@@ -688,7 +721,10 @@ grid-row: 8;
   /***********************************************************************
   ************************* FIFTH CONTENT ********************************
   ************************************************************************/
-
+.fifth-content{
+  background-color: #FBEBE2;
+  padding-top: 2rem;
+}
 .fifth-content-element {
     display: flex;
     flex-direction: row;
